<?xml version="1.0"?>
<package format="2">
  <name>tgrasp</name>
  <version>1.0.0</version>
  <description>The Winter project involving tactile sensor assisted grasping</description>

  <maintainer email="srikanthkilaru2018@u.northwestern.edu">Srikanth</maintainer>

  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libpcl1-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>intera_interface</build_depend>
  <build_depend>intera_examples</build_depend>
  <build_depend>intera_motion_msgs</build_depend>
  <build_depend>intera_tools_description</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>sawyer_description</build_depend>
  <build_depend>finger_sensors</build_depend>
  <build_depend>finger_sensor_msgs</build_depend>
  <build_depend>libpcl1</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>rgbd_launch</build_depend>
  <build_depend>tgrasp_msgs</build_depend>
  
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>libpcl1-dev</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <build_export_depend>intera_interface</build_export_depend>
  <build_export_depend>intera_examples</build_export_depend>
  <build_export_depend>intera_motion_msgs</build_export_depend>
  <build_export_depend>intera_tools_description</build_export_depend>
  <build_export_depend>intera_core_msgs</build_export_depend>
  <build_export_depend>sawyer_description</build_export_depend>
  <build_export_depend>finger_sensors</build_export_depend>
  <build_export_depend>finger_sensor_msgs</build_export_depend>
  <build_export_depend>libpcl1</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>rgbd_launch</build_export_depend>
  <build_export_depend>tgrasp_msgs</build_export_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>libpcl1</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>rgbd_launch</exec_depend>
  <exec_depend>intera_sdk</exec_depend>
  <exec_depend>intera_common</exec_depend>
  <exec_depend>intera_interface</exec_depend>
  <exec_depend>intera_examples</exec_depend>
  <exec_depend>intera_motion_msgs</exec_depend>
  <exec_depend>intera_tools_description</exec_depend>
  <exec_depend>intera_core_msgs</exec_depend>
  <exec_depend>sawyer_description</exec_depend>
  <exec_depend>finger_sensors</exec_depend>
  <exec_depend>finger_sensor_msgs</exec_depend>
  <exec_depend>libpcl1</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>rgbd_launch</exec_depend>
  <exec_depend>tgrasp_msgs</exec_depend>
  
  <export>
  </export>
</package>

